# BERTrainer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
bertrainer/: __init__.py  config.py  data.py  model.py  serve.py  train.py  utils.py
datasets/: example.jsonl
examples/: deberta.yaml
